tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__import_export_test__export_complete_state.snap
---
source: tests/snapshot_tests/screens/import_export_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 Export Complete                                "
"                                                                                "
"               ✓ Saved to: /path/to/keyring-backup.okb                          "
"                                                                                "
"               ✓ Records exported: 42                                           "
"                                                                                "
"                              Enter: back to config                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
