tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__import_export_test__export_exporting_state.snap
---
source: tests/snapshot_tests/screens/import_export_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                  Exporting...                                  "
"                                                                                "
"                      Encrypting and writing export file...                     "
"                                                                                "
"                                 Please wait...                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
