tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__import_export_test__export_form_default.snap
---
source: tests/snapshot_tests/screens/import_export_test.rs
expression: backend
---
"                                                                                "
"   ┌────────────────────────────────────────────────────────────────────────┐   "
"   │                               Export Data                             │   "
"   │                                                                        │   "
"   │    Export Format: .okb (Encrypted Backup)                             │   "
"   │  ℹ Only .okb format. Decryptable via password or Recovery Key          │   "
"   │                                                                        │   "
"   │  ┌ Export Password ─────────────────────────────────────────────────┐  │   "
"   │  │                                                                  │  │   "
"   │  └──────────────────────────────────────────────────────────────────┘  │   "
"   │  Strength:                                                             │   "
"   │  ┌ Confirm Password ────────────────────────────────────────────────┐  │   "
"   │  │Confirm export password                                           │  │   "
"   │  └──────────────────────────────────────────────────────────────────┘  │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │  ┌ Output Path ─────────────────────────────────────────────────────┐  │   "
"   │  │/path/to/keyring-backup.okb                                       │  │   "
"   │  └──────────────────────────────────────────────────────────────────┘  │   "
"   │                                                                        │   "
"   │            Tab: switch fields | Enter: continue | Esc: back            │   "
"   │                                                                        │   "
"   └────────────────────────────────────────────────────────────────────────┘   "
"                                                                                "
