tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__import_export_test__export_password_confirm_state.snap
---
source: tests/snapshot_tests/screens/import_export_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"   ┌────────────────────────────────────────────────────────────────────────┐   "
"   │                             Authorize Export                          │   "
"   │                                                                        │   "
"   │    Export All records to: /path/to/keyring-backup.okb                 │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │  ┌ Master Password ─────────────────────────────────────────────────┐  │   "
"   │  │••••••••••                                                        │  │   "
"   │  └──────────────────────────────────────────────────────────────────┘  │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                        Enter: export | Esc: back                       │   "
"   │                                                                        │   "
"   └────────────────────────────────────────────────────────────────────────┘   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
