tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__import_export_test__import_complete_state.snap
---
source: tests/snapshot_tests/screens/import_export_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 Import Complete                                "
"                                                                                "
"               ✓ Records imported: 15                                           "
"               ⚠ Partially imported: 2 (check field completeness)               "
"               ⚠ Records skipped: 1                                             "
"                                                                                "
"                              Enter: back to config                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
