tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__import_export_test__import_preview_state.snap
---
source: tests/snapshot_tests/screens/import_export_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 Import Preview                                 "
"                                                                                "
"          ✓ Importable: 30                                                      "
"          ✗ Failed: 1                                                           "
"                                                                                "
"          Review items:                                                         "
"            - GitHub (Duplicate name found)                                     "
"                                                                                "
"            - SSH Key (Corrupted private key file)                              "
"                         Enter: start import | Esc: back                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
