tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__import_export_test__import_progress_state.snap
---
source: tests/snapshot_tests/screens/import_export_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                  Importing...                                  "
"                                                                                "
"               [██████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░] 25/100                "
"               Processing: Work Email                                           "
"                                                                                "
"                                 Please wait...                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
