tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__import_export_test__import_source_select_file_path.snap
---
source: tests/snapshot_tests/screens/import_export_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                   Import Data                                  "
"              Tab: switch fields | ↑↓: navigate | 1=Import 2=Export             "
"                                                                                "
"          Select Source                                                         "
"           ▶ KeePass (.kdbx) 🔑  Password / URL / Notes                         " Hidden by multi-width symbols: [(30, " ")]
"             1Password (.1pux)  Password / TOTP  ⚠ Custom fields                "
"             1Password (.opvault) 🔑  Password / TOTP  ⚠ Custom fields          " Hidden by multi-width symbols: [(35, " ")]
"             Bitwarden (.json) 🔑  Password / TOTP / URL  ✗ Attachment          " Hidden by multi-width symbols: [(32, " ")]
"             CSV  Column-mapped fields                                          "
"             OpenKeyring Backup (.okb)  All data                                "
"                                                                                "
"          ┌ File Path ───────────────────────────────────────────────┐          "
"          │/path/to/passwords.kdbx                                   │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"          ┌ Decryption Password ─────────────────────────────────────┐          "
"          │Enter password                                            │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                           Enter: validate | Esc: back                          "
"                                                                                "
"                                                                                "
